package model.equipaggio;

public enum TipoPedina {
	ASTRONAUTA, ALIENO_VIOLA, ALIENO_MARRONE;
}